--- a/fe/index.html
+++ b/fe/index.html
@@ -69,6 +69,7 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<!-- Scripts here. Don't remove ↓ -->
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="js/app.js"></script>
 	</body>
